# miso-jswidget-example

./: .gitignore  README.md  all.js  default.nix  index.html  miso-jswidget-example.cabal  pkg.nix
src/: Flatpickr.hs  Main.hs
