name:                miso-jswidget-example
version:             0.1.0.0
synopsis:            Embedding a JS widget in Miso example
author:              Falco Peijnenburg
maintainer:          fpeijnenburg@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable main
  main-is:
    Main.hs

  ghcjs-options:
    -dedupe

  hs-source-dirs:
    src

  build-depends:
    base,
    ghcjs-base,
    lens,
    miso,
    stm,
    time

  default-language:
    Haskell2010
